--- a/server/scss/_questions.scss
+++ b/server/scss/_questions.scss
@@ -91,7 +91,7 @@
   animation-name: colorFluctuations;
   background: rgb(197, 164, 197);
   animation-name: colorFluctuations;
-  animation-duration: 8s;
+  animation-duration: 20s;
   animation-iteration-count: infinite;
 }
 
@@ -111,15 +111,10 @@
 // }
 
 @keyframes colorFluctuations {
-  0%   {background-color:rgb(197, 164, 197);}
-  10%  {background-color:rgb(241, 139, 196);}
-  20%  {background-color:rgb(236, 200, 171);}
-  30%  {background-color:rgb(196, 230, 195);}
-  40%  {background-color:rgb(216, 184, 216);}
-  50%  {background-color:rgb(151, 173, 206);}
-  60%  {background-color:rgb(139, 179, 172);}
-  70%  {background-color:rgb(205, 228, 175);}
-  80%  {background-color:rgb(204, 172, 172);}
-  90%  {background-color:rgb(207, 155, 228);}
-  100%  {background-color:rgb(197, 164, 197);}
+  0%   {background-color: #4ad9de;}
+  25%  {background-color: rgb(201, 56, 80);}
+  50%   {background-color: #4ad9de;}
+  75%  {background-color: rgb(201, 56, 80);}
+  100%   {background-color: #4ad9de;}
+
 }
