--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -175,6 +175,16 @@ body{
     }
   }
 
+  #timer{
+    /* background: rgb(197, 164, 197); */
+    animation-name: colorFluctuations;
+  }
+
+  @keyframes colorFluctuations {
+    0%   {background-color:rgb(11, 90, 64);}
+    100%  {background-color:rgb(194, 77, 10);}
+  }
+
 input[type='text'],
 input[type='number'],
 input {
