--- a/server/scss/_questions.scss
+++ b/server/scss/_questions.scss
@@ -83,38 +83,14 @@
 .filler {
   height: 100%;
   border-radius: inherit;
-  transition: width 1s ease-in-out;
-  // -webkit-animation-name: colorChange; /* Safari 4.0 - 8.0 */
-  // -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
-  // animation-name: colorChange;
-  // animation-duration: 38s;
+  transition-duration: 1s;
+  transition-timing-function: linear;
   animation-name: colorFluctuations;
-  background: rgb(197, 164, 197);
-  animation-name: colorFluctuations;
-  animation-duration: 20s;
-  animation-iteration-count: infinite;
 }
-
-@-webkit-keyframes colorChange {
-  from {background-color: red}
-  to {background-color: yellow;}
-}
-@keyframes colorChange {
-  from {background-color: red;}
-  to {background-color: yellow;}
-}
-
-// @mixin progress-width {
-//    progresswidth and (width) {
-//     @content;
-//   }
-// }
 
 @keyframes colorFluctuations {
-  0%   {background-color: #4ad9de;}
-  25%  {background-color: rgb(201, 56, 80);}
-  50%   {background-color: #4ad9de;}
-  75%  {background-color: rgb(201, 56, 80);}
-  100%   {background-color: #4ad9de;}
-
+  0%   {background-color: #33A4A8;}
+  50%   {background-color: #33A4A8;}
+  75%  {background-color: #ED5A86;}
+  100%   {background-color: #F52B04;}
 }
