add pulsing img for loading screens

--- a/server/scss/_loading.scss
+++ b/server/scss/_loading.scss
@@ -12,7 +12,9 @@
   }
 
   &-text {
-    margin-top: 5rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    padding: 1rem;
     line-height: 1.5;
     font-size: 1.5rem;
   }
