Modify instructions and Main Menu buttons

--- a/server/scss/_instruct.scss
+++ b/server/scss/_instruct.scss
@@ -17,6 +17,10 @@
     padding-bottom: 1rem;
   } 
 
+  .scoring{
+    padding-bottom: 0;
+  }
+
   &__step {
     margin-top: 1rem;
     font-weight: 700;
